2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* disasm_str.c: Include system.h.

2015-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* asm_align.c: Remove sys/param.h include.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (AM_CPPFLAGS): Add libdwelf.
	(libasm.so): Add libdw.
	* asm_begin.c (prepare_binary_output): Use dwelf_strtab instead of
	ebl_strtab.
	* asm_end.c (binary_end): Likewise.
	(__libasm_finictx): Likewise.
	* asm_newabssym.c (asm_newabssym):  Likewise.
	* asm_newcomsym.c (asm_newcomsym): Likewise.
	* asm_newscn.c (binary_newscn): Likewise.
	* asm_newscngrp.c (asm_newscngrp): Likewise.
	* asm_newsym.c (asm_newsym): Likewise.
	* libasmP.h: Likewise.
	* symbolhash.c (COMPARE): Likewise.
	* symbolhash.h (COMPARE): Likewise.

2016-06-28  Richard Henderson <rth@redhat.com>

	* disasm_cb.c (disasm_cb): Pass ebl to disasm hook.

2016-02-12  Mark Wielaard  <mjw@redhat.com>

	* asm_begin.c (prepare_text_output): Only call __fsetlocking when
	result isn't NULL.

2015-10-05  Josh Stone  <jistone@redhat.com>

	* Makefile.am (libasm.so): Add AM_V_CCLD and AM_V_at silencers.

2015-09-23  Mark Wielaard  <mjw@redhat.com>

	* asm_align.c (__libasm_ensure_section_space): Mark as
	internal_function.
	* asm_end.c (__libasm_finictx): Likewise.
	* asm_error.c (__libasm_seterrno): Likewise.

2015-09-22  Mark Wielaard  <mjw@redhat.com>

	* asm_*.c: Remove old-style function definitions.

2015-09-04  Chih-Hung Hsieh  <chh@google.com>

	* asm_addint8.c (FCT): Replace K&R function definition
	with ansi-C definitions.
	* asm_adduint8.c (UFCT): Likewise.
	* asm_begin.c (asm_begin): Likewise.

2014-12-18  Ulrich Drepper  <drepper@gmail.com>

	* Makefile.am: Suppress output of textrel_check command.

2014-11-27  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libasm.so): Use textrel_check.

2014-04-13  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am: Remove !MUDFLAP conditions.

2013-04-24  Mark Wielaard  <mjw@redhat.com>
