@@ -1,8 +1,12 @@
+2017-02-12  Mark Wielaard  <mjw@redhat.com>
+
+	* asm_newsym.c (asm_newsym): Increase TEMPSYMLEN to 13.
+
 2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>
 
 	* disasm_str.c: Include system.h.
 
-2015-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>
+2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>
 
 	* asm_align.c: Remove sys/param.h include.
 
